<resources>
    <string name="app_name">Tik_tok</string>
    <string name="tik_tok">抖音自动化</string>
    <string name="tv_scan_video">浏览视频时长(分钟)：</string>
    <string name="et_look_count">0:永久</string>
    <string name="tv_look_time">视频停留的时间(秒)：</string>
    <string name="et_default_time">默认停留时间30s</string>
    <string name="tv_login">自动登录</string>
    <string name="cb_publish_video">发布视频</string>
    <string name="tv_tik_tok_count">任务次数：</string>
    <string name="et_tik_tok_count">默认执行一次</string>
    <string name="cb_backup">登录数据备份</string>
    <string name="cb_agree">点赞</string>
    <string name="cb_comment">评论</string>
    <string name="tv_video_keyword">关键字：</string>
    <string name="et_video_keyword">宠物、情感、音乐等</string>
    <string name="bt_start">开始任务</string>
    <string name="tv_add_contact">起始位置：</string>
    <string name="et_add_contact">默认是0</string>
    <string name="tv_contacts">添加联系人</string>
    <string name="tv_end_index">终止位置：</string>
    <string name="et_end_index">默认是100</string>
    <string name="tv_delete_contacts">删除联系人</string>
    <string name="cb_add_contacts">添加联系人</string>
    <string name="cb_delete_contacts">删除联系人</string>
    <string name="tv_tip">已添加/删除：</string>
    <string name="tv_navigation_script">自动化</string>
    <string name="tv_navigation_contact">联系人</string>
    <string name="cb_look_video">浏览视频</string>
    <string name="bt_stop">停止任务</string>
    <string name="tv_contacts_count">可导入联系人：</string>
    <string name="tv_total_contacts">0</string>
    <string name="tv_contacts_enum">条</string>
    <string name="rb_contacts_min">200–300条</string>
    <string name="rb_contacts_middle">500–600条</string>
    <string name="rb_contacts_max">900–1000条</string>
    <string name="tv_unroot_tip">抖音自动化(手机未root)</string>
    <string name="tv_root_unauth">抖音自动化(手机已root但应用未获得root权限)</string>
    <string name="tv_root_tip">抖音自动化(手机已root)</string>
    <string name="tv_added_index">已添加联系人：</string>
</resources>
