<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_root_tip"
        android:text="@string/tik_tok"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/sp_18"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cb_look_video"
        android:text="@string/cb_look_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_scan_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_look_time"
            android:hint="@string/et_look_count"
            android:inputType="number"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_look_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_stay_time"
            android:hint="@string/et_default_time"
            android:inputType="number"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_video_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_video_keyword"
            android:layout_gravity="bottom"
            android:hint="@string/et_video_keyword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_agree"/>
        <CheckBox
            android:id="@+id/cb_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_comment"/>
    </LinearLayout>

    <CheckBox
        android:id="@+id/cb_publish_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cb_publish_video"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <CheckBox
            android:id="@+id/cb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_login" />

        <CheckBox
            android:id="@+id/cb_backup_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_backup" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_tik_tok_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <EditText
            android:id="@+id/et_task_count"
            android:hint="@string/et_tik_tok_count"
            android:inputType="number"
            android:layout_gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_start"
        android:text="@string/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>