<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="match_parent">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:text="@string/tv_contacts"/>-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_added_index"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/holo_red_light"
            android:layout_width="wrap_content"
            android:text="@string/tv_added_index"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_operate"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_add_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_add_contacts"/>
        <RadioButton
            android:id="@+id/rb_delete_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cb_delete_contacts"/>
    </RadioGroup>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_contacts_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_total_contacts"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/tv_total_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_contacts_enum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:gravity="center_vertical"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_add_contact"/>
        <EditText
            android:id="@+id/et_start_index"
            android:layout_gravity="bottom"
            android:inputType="number"
            android:hint="@string/et_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:layout_marginStart="@dimen/dp_10"
            android:visibility="visible"
            android:text="@string/tv_end_index"/>
        <EditText
            android:id="@+id/et_end_index"
            android:hint="@string/et_end_index"
            android:layout_gravity="bottom"
            android:inputType="number"
            android:visibility="visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/rg_contacts_count"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_contacts_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_contacts_min"/>
        <RadioButton
            android:id="@+id/rb_contacts_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_contacts_middle"/>
        <RadioButton
            android:id="@+id/rb_contacts_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rb_contacts_max"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:text="@string/tv_tip"/>
        <TextView
            android:id="@+id/tv_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_18"
            android:text="条"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_contact_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_start"/>
    </LinearLayout>

</LinearLayout>